# scratch-sync

./: .gitignore  README.md  install.ps1  install.sh  pyproject.toml
.github/workflows/: pages.yml  publish.yml  test.yml
site/: CNAME  cli.html  index.html  install.html
site/assets/: style.css
src/scratch_sync/: __init__.py  __main__.py  cli.py  discovery.py  syncthing.py  tailscale.py  uv.py
