[project]
name = "scratch-sync"
version = "0.1.0"
description = "Sync private scratch/ folders across machines using Syncthing over Tailscale"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "httpx>=0.25",
    "rich-click>=1.8",
]

[project.scripts]
scratch-sync = "scratch_sync.cli:main"

[project.urls]
Homepage = "https://github.com/talmolab/scratch-sync"
Repository = "https://github.com/talmolab/scratch-sync"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scratch_sync"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
]
